SVM hyperparameter search, poly, linear, sigmoid

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 results_SVM.csv
+English dictionnary.csv
+dictionnary.csv
+french dictionary.csv
+French dictionnary.csv
+french.csv
+Output_comp.csv
+Processed Test.csv
+processed.csv
+Data/dictionnaire.txt
