Produce confusion matrices and classification metrics for LR and SVM

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ Data/hp_optimization/results_SVM_0.2.csv
 Data/hp_optimization/results_SVM_processed.csv
 Data/hp_optimization/SVM poly 0.01 9000.png
 Data/hp_optimization/SVM_9000_poly_0.01_1confusion matrix.png
+Classification Metrics LR.csv
+Classification Metrics SVM.csv
+Confusion matrix for 0.2 LR.png
+Confusion matrix for 0.2 SVM.png
+Data/hp_optimization/infos_2_0.2.csv
+Data/hp_optimization/Mean errors_2_0.2.csv
+Data/hp_optimization/results_SVM_2_0.2.csv
+Data/hp_optimization/results_SVM_processed_2_0.2.csv
+Data/hp_optimization/SVM linear 0.001 1.png
