--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Naive Bayes Confusion Matrix.png
 Logistic Regression Confusion Matrix.png
 Linear SVC Results.csv
 Linear SVC Confusion Matrix.png
+SGD Confusion Matrix.png
